# temporary-escape

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  RenderDocDebug.cap  convert.py  perf.data  perf.data.old  vcpkg-configuration.json  vcpkg.json
matchmaker/: .dockeringore  .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml  run.sh
matchmaker/chart/: Chart.yaml  values.yaml
matchmaker/deploy/: docker-compose.yaml
matchmaker/deploy/traefik/: dynamic.yaml  local.yaml  traefik.yaml
matchmaker/matchmaker/: app.py  auth.py  client.py  config.py  db.py  main.py  models.py  router.py  utils.py
matchmaker/matchmaker/api/: servers.py
matchmaker/matchmaker/internal/: base_client.py  connections.py  github_client.py  itchio_client.py
matchmaker/matchmaker/routers/: auth.py  auth_v1.py  servers.py  servers_v1.py  ui.py
matchmaker/static/css/: custom.css
matchmaker/templates/: base.html  hero.html  home.html  login.html  message.html  oauth_itchio_callback.html
matchmaker/traefik/: local.sh  traefik-local.yaml
src/: CMakeLists.txt  main.cpp  supp
src/Engine/: Config.hpp  Future.hpp  Library.hpp  UserInput.hpp  Window.hpp
src/Engine/Assets/: Asset.hpp  AssetsManager.cpp  AssetsManager.hpp  Block.cpp  Block.hpp  CollisionShape.cpp  CollisionShape.hpp  Image.cpp  Image.hpp  ImageAtlas.cpp  ImageAtlas.hpp  Material.hpp  ModManifest.hpp  ModPackage.hpp  Model.cpp  Model.hpp  ParticlesType.cpp  ParticlesType.hpp  PlanetType.cpp  PlanetType.hpp  Primitive.hpp  Shader.cpp  Shader.hpp  ShipTemplate.cpp  ShipTemplate.hpp  Sound.cpp  Sound.hpp  Texture.cpp  Texture.hpp  Turret.cpp  Turret.hpp  VoxelShape.cpp  VoxelShape.hpp  VoxelShapeCache.cpp
src/Engine/Audio/: AudioBuffer.cpp  AudioBuffer.hpp  AudioContext.cpp  AudioContext.hpp  AudioSource.cpp  AudioSource.hpp
src/Engine/Client/: Application.cpp  Application.hpp  BannerImage.cpp  BannerImage.hpp  Client.cpp  Client.hpp  DedicatedServer.cpp  DedicatedServer.hpp  Editor.cpp  Editor.hpp  Game.cpp  Game.hpp  LocalCache.cpp  LocalCache.hpp  Stats.hpp  View.cpp  View.hpp  ViewBuild.cpp  ViewBuild.hpp  ViewGalaxy.cpp  ViewGalaxy.hpp  ViewSpace.cpp  ViewSpace.hpp  ViewSystem.cpp  ViewSystem.hpp
src/Engine/Crypto/: AES.cpp  AES.hpp  DiffieHellmanKey.cpp  DiffieHellmanKey.hpp  ECDH.cpp  ECDH.hpp  HKDF.cpp  HKDF.hpp  HMAC.cpp  HMAC.hpp  PrivateKey.cpp  PrivateKey.hpp  X509Cert.cpp  X509Cert.hpp
src/Engine/Database/: Database.hpp  DatabaseRocksdb.cpp  DatabaseRocksdb.hpp  RocksDB.cpp  SaveInfo.cpp  SaveInfo.hpp
src/Engine/File/: GltfFileReader.cpp  GltfFileReader.hpp  Ktx2FileReader.cpp  Ktx2FileReader.hpp  Lz4FileReader.cpp  Lz4FileReader.hpp  Lz4FileWriter.cpp  Lz4FileWriter.hpp  MsgpackFileReader.cpp  MsgpackFileReader.hpp  MsgpackFileWriter.cpp  MsgpackFileWriter.hpp  OggFileReader.cpp  OggFileReader.hpp  PngFileReader.cpp  PngFileReader.hpp  TebFileHeader.cpp  TebFileHeader.hpp
src/Engine/Font/: FontFace.cpp  FontFace.hpp  FontFamily.cpp  FontFamily.hpp  FontFamilyDefault.cpp  FontFamilyDefault.hpp  FontLoader.cpp  FontLoader.hpp  TextShaper.cpp  TextShaper.hpp
src/Engine/Graphics/: Canvas.cpp  Canvas.hpp  Canvas2.cpp  Canvas2.hpp  MaterialTextures.cpp  MaterialTextures.hpp  Mesh.hpp  MeshUtils.cpp  MeshUtils.hpp  Nuklear.cpp  Nuklear.hpp  PlanetTextures.hpp  RenderBuffer.cpp  RenderBuffer.hpp  RenderBufferPbr.cpp  RenderBufferPbr.hpp  RenderBufferPlanet.cpp  RenderBufferPlanet.hpp  RenderBufferSkybox.cpp  RenderBufferSkybox.hpp  RenderOptions.hpp  RenderPass.cpp  RenderPass.hpp  RenderPipeline.cpp  RenderPipeline.hpp  RenderResources.cpp  RenderResources.hpp  Renderer.cpp  Renderer.hpp  RendererBackground.cpp  RendererBackground.hpp  RendererCanvas.cpp  RendererCanvas.hpp  RendererPlanetSurface.cpp  RendererPlanetSurface.hpp  RendererScenePbr.cpp  RendererScenePbr.hpp  RendererSkybox.cpp  RendererSkybox.hpp  RendererThumbnail.cpp  (+10 more)
src/Engine/Gui/: GuiBlockInfo.cpp  (+30 more)
src/Scissio/: CMakeLists.txt  Config.hpp  Future.hpp  Library.hpp  Main.cpp
src/Scissio-old/: CMakeLists.txt  Config.hpp  Main.cpp
src/TemporaryEscape/: CMakeLists.txt  Config.hpp
src/TemporaryEscapeMain/: CMakeLists.txt  Main.cpp
src/_Old/: Application.hpp  AssetEntity.hpp  AssetFontFace.cpp  AssetFontFace.hpp  AssetFontFamily.cpp  AssetFontFamily.hpp  AssetImage.cpp  AssetManager.cpp  AssetManager.hpp  AssetModel.hpp  AssetParticles.cpp  AssetPlanet.hpp  AssetSector.hpp  AssetShape.cpp  AssetShape.hpp  AssetTexture.cpp  AssetTurret.hpp  ComponentCameraTop.hpp  ComponentCameraTurntable.cpp  ComponentCameraTurntable.hpp  GBuffer.hpp  Imager.hpp  Primitive.hpp  Renderer.hpp  Shaders.hpp  SkyboxRenderer.cpp  TextureAtlas.hpp  TextureCompressor.hpp  View.cpp  View.hpp  ViewBuild.cpp  ViewMap.cpp  ViewVoxelTest.cpp  Widgets.hpp
src/doc/: index.html
src/engine/: config.hpp  enums.hpp  future.hpp  library.hpp  user_input.hpp  window.hpp
test/: CMakeLists.txt  CatchFormat.hpp  Common.hpp  TickThread.hpp  TmpDir.hpp  bad-network.sh  catch_format.hpp  common.hpp  conditions.hpp  supp  tmp_dir.hpp
test/Common/: Catch.hpp  Conditions.hpp  FixtureClientServer.hpp  IoServiceRunner.hpp  RefCounter.hpp
test/Fixtures/: ClientServerFixture.cpp  ClientServerFixture.hpp
test/FunctionalTests/: FeaturePlayerLogin.cpp
test/Scissio/: CMakeLists.txt  Common.hpp
test/TemporaryEscapeFunctionalTests/: CMakeLists.txt  Common.cpp  Common.hpp
test/TemporaryEscapeUnitTests/: CMakeLists.txt  Common.cpp  Common.hpp
test/crypto/: crypto_tests.cpp
test/database/: database_rocksdb_tests.cpp  rocks_db_tests.cpp
test/file/: lz4_file_tests.cpp  msgpack_file_tests.cpp
test/fixtures/: client_server_fixture.cpp  client_server_fixture.hpp
test/math/: utils_tests.cpp
test/network/: crypto_tests.cpp  network_tcp_tests.cpp  server_tests.cpp  stream_test.cpp
test/scene/: entity_tests.cpp  grid_tests.cpp
test/server/: server_connect_tests.cpp
test/stream/: compression_stream_tests.cpp
test/utils/: bitfield_tests.cpp  event_bus_tests.cpp  lz4_file_tests.cpp  worker_tests.cpp  yaml_tests.cpp
(+2837 files in other folders)
