[project]
name = "matchmaker"
version = "0.1.0"
description = "Temporary Escape Matchmaker Server"
requires-python = ">=3.11"
authors = [
    { name = "Matus Novak", email = "email@matusnovak.com" }
]
dependencies = [
    "fastapi[all]",
]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
